--- a/back-end/resources/css/app.css
+++ b/back-end/resources/css/app.css
@@ -1,6 +1,13 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-@import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~@fortawesome/fontawesome-free/css/all.css'; */
+
+a:hover{
+color: black;
+}
+a{
+    color: black;
+    }
