Dashboard CSS Style + Header link fix

--- a/back-end/resources/css/app.css
+++ b/back-end/resources/css/app.css
@@ -44,8 +44,19 @@
   }
   
   a:hover {
-    color: #1c3a4a; /* Colore predefinito per i link */
+    color: #1c3a4a; 
     text-decoration: none; /* Rimuove il sottolineato predefinito */
+  }
+  .btn{
+    border-radius: 10px;
+  }
+
+  .card{
+    border-radius: 10px;
+    box-shadow: none;
+  }
+  .card-img-top{
+    border-radius: 10px;
   }
 
   .my_btn{
@@ -53,7 +64,16 @@
     border-radius: 10px;
     color: white;
   }
+  .my_btn:hover{
+   
+    background-color: #5cb2dd;
+    border-radius: 10px;
+    color: white;
+  }
   .my_btn a{
+    color: white;
+  }
+  .my_btn a:hover{
     color: white;
   }
 
