--- a/back-end/resources/css/app.css
+++ b/back-end/resources/css/app.css
@@ -47,7 +47,7 @@
     color: #1c3a4a; 
     text-decoration: none; /* Rimuove il sottolineato predefinito */
   }
-  .btn{
+  .form-control, .btn{
     border-radius: 10px;
   }
 
@@ -77,5 +77,7 @@
     color: white;
   }
 
+
+ 
   
   
