Messages.blade style + modal

--- a/back-end/resources/css/app.css
+++ b/back-end/resources/css/app.css
@@ -36,6 +36,10 @@
   p {
     margin-bottom: 1em; /* Aggiunge spazio inferiore ai paragrafi */
   }
+
+  ul{
+    list-style-type: none;
+  }
   
   /* Link */
   a {
