--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -81,4 +81,9 @@ a:hover {
   color: white;
 }
 
+.sponsored-apartment {
+  border: 1px solid  #5cb2dd; /* Giallo Oro per sponsorizzazione */
+  box-shadow: 0 0 7px #5cb2dd; 
+}
+
 
