--- a/back-end/resources/css/app.css
+++ b/back-end/resources/css/app.css
@@ -26,8 +26,25 @@
     font-size: 16px; /* Imposta la dimensione del carattere predefinita */
     line-height: 1.5; /* Imposta l'altezza della riga predefinita */
     color: #1c3a4a; /* Cambio del colore del testo principale */
+   
+  }
+  /* Style Form */
+  /* form:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 255, 0.5);
+  } */
+  @keyframes pulse {
+    0% { border-color: #ccc; }
+    50% { border-color: #63beec; }
+    100% { border-color: #ccc; }
   }
   
+  form:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 255, 0.5);
+    border-color: #ccc;
+    animation: pulse 2s infinite;
+    transition: box-shadow 0.3s ease-in-out, border-color 0.3s ease-in-out;
+  }
+
   /* Imposta il font per gli elementi specifici */
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif; /* Imposta il font per i titoli */
