--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -52,12 +52,15 @@ a:hover {
   text-decoration: none; /* Rimuove il sottolineato predefinito */
 }
 .form-control, .btn{
-  border-radius: 10px;
+  border-radius: 30px;
 }
 
 .card{
-  border-radius: 10px;
+  border-radius: 20px !important;
   box-shadow: none;
+}
+.card-container{
+  border-radius: 20px;
 }
 .card-img-top{
   border-radius: 10px;
@@ -65,13 +68,13 @@ a:hover {
 
 .my_btn{
   background-color: #63beec;
-  border-radius: 10px;
+  border-radius: 30px;
   color: white;
 }
 
 .my_btn:hover{
   background-color: #5cb2dd;
-  border-radius: 10px;
+  border-radius: 30px;
   color: white;
 }
 .my_btn a{
